Basic subtext of demos added to demo page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Entourage",
+  "name": "entourageassembler",
   "version": "0.0.4",
   "description": "Assemble an entourage of web ui components and utilities",
   "main": "index.js",
