Distribution change for npm

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "description": "Assemble an entourage of web ui components and utilities",
   "main": "index.js",
+  "module": "dist/Entourage.es.js",
   "files": [
     "dist/Entourage.es.js"
   ],
