--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "rollup -c rollup.es.config.js",
-    "demo": "rollup -c rollup.demo.config.js"
+    "demo": "rollup -c rollup.demo.config.js",
+    "workers": "rollup -c rollup.storageworker.config.js && rollup -c rollup.logworker.config.js"
   },
   "devDependencies": {
     "rollup": "^0.52.0",
@@ -27,7 +28,7 @@
     "postalworker": "^2.0.9",
     "query-string": "^6.0.0",
     "safe-json-stringify": "^1.1.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "repository": {
     "type": "git",
