--- a/package.json
+++ b/package.json
@@ -17,17 +17,6 @@
     "doc": "jsdoc -c jsdoc.json"
   },
   "devDependencies": {
-    "rollup": "^0.52.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-eslint": "^3.0.0",
-    "rollup-plugin-multi-entry": "^2.0.2",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-replace": "^1.2.1",
-    "rollup-plugin-uglify-es": "0.0.1",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babelrc-rollup": "^3.0.0",
@@ -35,8 +24,19 @@
     "cross-env": "^3.1.4",
     "docdash": "^0.4.0",
     "jsdoc": "^3.5.5",
-    "mocha": "^3.2.0",
-    "nyc": "^10.1.2"
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1",
+    "rollup": "^0.52.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-eslint": "^3.0.0",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-multi-entry": "^2.0.2",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-replace": "^1.2.1",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "css-element-queries": "^0.4.0",
